<resources>
    <string name="app_name">QQ6.1</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="login_phone">请输入手机号</string>
    <string name="login_86">+86&#160;</string>
    <string name="register_new">新用户注册</string>
    <string name="code_resetpwd">忘记密码</string>
    <string name="login">登&#160;&#160;录</string>
    <string name="pwd">密码</string>
    <string name="login_pwd">请输入密码</string>
</resources>
