<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/base_fill_fill"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        style="@style/base_fill_fill"
        android:layout_gravity="center"
        android:layout_weight="5">

        <RelativeLayout
            style="@style/base_wrap_wrap"
            android:layout_centerInParent="true">

            <include layout="@layout/public_head_color_item" />
        </RelativeLayout>
    </RelativeLayout>


    <LinearLayout
        style="@style/base_fill_fill"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            style="@style/base_fill_wrap"
            android:background="@color/gray_login_bg"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20">

            <LinearLayout
                style="@style/base_fill_wrap"
                android:orientation="horizontal"
                android:padding="@dimen/dp_2">

                <TextView
                    style="@style/base_wrap_wrap"
                    android:text="@string/login_86" />

                <EditText
                    android:id="@+id/et_username"
                    style="@style/login_edt"
                    android:layout_marginLeft="@dimen/dp_4"
                    android:layout_marginStart="@dimen/dp_4"
                    android:hint="@string/login_phone" />
            </LinearLayout>

            <View
                style="@style/line_horizontal"
                android:layout_marginTop="@dimen/dp_2" />

            <LinearLayout
                style="@style/base_fill_wrap"
                android:layout_marginBottom="@dimen/dp_2"
                android:orientation="horizontal"

                android:padding="@dimen/dp_2">

                <TextView
                    style="@style/base_wrap_wrap"
                    android:text="@string/pwd" />

                <EditText
                    android:id="@+id/et_password"
                    style="@style/login_edt"
                    android:layout_marginLeft="@dimen/dp_4"
                    android:layout_marginStart="@dimen/dp_4"
                    android:hint="@string/login_pwd"
                    android:inputType="textPassword" />
            </LinearLayout>


        </LinearLayout>


        <Button
            android:id="@+id/login_btn"
            style="@style/login_btn"
            android:layout_margin="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_36"
            android:text="@string/login" />

        <RelativeLayout
            style="@style/base_fill_wrap"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20">


            <TextView
                android:id="@+id/register"
                style="@style/base_wrap_wrap"
                android:layout_marginTop="@dimen/dp_12"
                android:text="@string/register_new"
                android:textColor="@color/blue_login_press" />

            <TextView
                android:id="@+id/code_login"
                style="@style/base_wrap_wrap"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/register"
                android:text="@string/code_resetpwd"
                android:textColor="@color/blue_login_press" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
